--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 server:
-  port: 80
+  port: 81
 spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/ticketsystem?useUnicode=true&;characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/bookmanage?useUnicode=true&;characterEncoding=UTF-8&useSSL=false
     username: root
-    password: kiss4400
+    password: 12345678
   servlet:
     multipart:
       max-file-size: 1024MB
